--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.port=5004
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.batch.job.enabled=false
 spring.batch.jdbc.initialize-schema=ALWAYS
+
+access.key.id=
+access.key.secret=
