--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
-spring.datasource.url=jdbc:sqlserver://SG2NWPLS14SQL-v04.shr.prod.sin2.secureserver.net;databaseName=RiskAssessmentDB
-spring.datasource.username=Unzip
-spring.datasource.password=Unziptech2017@
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=true
-server.port=5004
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.batch.job.enabled=false
-spring.batch.jdbc.initialize-schema=ALWAYS
 
-access.key.id=
-access.key.secret=
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+jdbc.driver-class-name:com.mysql.jdbc.Driver
+jdbc.show-sql:true
+
+# MySQL database connection strings for SCHOOL
+db1.datasource.url=jdbc:sqlserver://SG2NWPLS14SQL-v04.shr.prod.sin2.secureserver.net;databaseName=RiskAssessmentDB
+db1.datasource.username=Unzip
+db1.datasource.password=Unziptech2017@
+
+# MySQL database connection strings for STUDENT
+db2.datasource.url=jdbc:mysql://127.0.0.1:3306/lv_safety_verification
+db2.datasource.username=root
+db2.datasource.password=CapeElectricSoftware@2021
+server.port=5004
+
+
+
+
